[pop_init] Generate Population Function

--- a/src/basic-GA.ipynb
+++ b/src/basic-GA.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from numpy import random"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,6 +22,30 @@
    "metadata": {},
    "source": [
     "`Descrição:`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_population(n_rows, n_cols, a, b):\n",
+    "    '''\n",
+    "    This function generates a random populations as a matrix of size n_rows x n_cols and [a,b) values\n",
+    "    \n",
+    "    INPUT: \n",
+    "    n_rows: number of lines\n",
+    "    n_cols: number of lines\n",
+    "    a: lower interval\n",
+    "    b: higher interval\n",
+    "    \n",
+    "    OUTPUT: \n",
+    "    np_population: n_rows x n_cols random numpy array\n",
+    "    '''\n",
+    "\n",
+    "    np_population = (b - a) * random.random_sample((n_rows,n_cols)) + a\n",
+    "    return np_population"
    ]
   },
   {
